mqtt_experiments/kubernetes/homeassistant/homeassistant_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: smartnet
spec:
  ports:
  - name: http
    targetPort: 8123
    port: 80
  selector:
    app: homeassistant
