mqtt_experiments/kubernetes/homeassistant/smartnet_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: redistoyapp
  namespace: smartnet
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: homeassistant.barnprojects.com
    http:
      paths:
      - path: /
        backend:
          serviceName: homeassistant
          servicePort: http
